--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -104,6 +104,7 @@
             android:hint="Email"
             android:layout_marginHorizontal="24dp"
             android:layout_marginVertical="5dp"
+            android:paddingStart="10dp"
             android:textColorHint="@color/warna_auth_font"
             android:textColor="@color/warna_auth_font"
             android:background="@drawable/transparent_bg_button"
@@ -208,12 +209,13 @@
             android:layout_height="wrap_content"
             style="@style/firstbutton"
             android:fontFamily="@font/dm_sans_medium"
-            android:layout_marginVertical="40dp"
             android:paddingVertical="10dp"
+            android:layout_marginBottom="40dp"
             android:layout_marginHorizontal="24dp"
             android:text="Masuk"
-            app:layout_constraintTop_toBottomOf="@+id/tvLupaPassword"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:enabled="false"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
