--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -97,22 +97,23 @@
             app:layout_constraintStart_toEndOf="@+id/tvEmail"
             app:layout_constraintTop_toBottomOf="@+id/ivLogin"/>
 
-        <EditText
-            android:id="@+id/etEmail"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:hint="Email"
-            android:layout_marginHorizontal="24dp"
-            android:layout_marginVertical="5dp"
-            android:paddingStart="10dp"
-            android:textColorHint="@color/warna_auth_font"
-            android:textColor="@color/warna_auth_font"
-            android:background="@drawable/transparent_bg_button"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvEmail"
-            />
+    <EditText
+        android:id="@+id/etEmail"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginVertical="5dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/transparent_bg_button"
+        android:hint="Email"
+        android:paddingStart="10dp"
+        android:textColor="@color/warna_auth_font"
+        android:textColorHint="@color/warna_auth_font"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
 
-        <TextView
+    <TextView
             android:id="@+id/tvWarningEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -210,12 +211,30 @@
             style="@style/firstbutton"
             android:fontFamily="@font/dm_sans_medium"
             android:paddingVertical="10dp"
-            android:layout_marginBottom="40dp"
             android:layout_marginHorizontal="24dp"
             android:text="Masuk"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/btnLoginGoogle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:enabled="false"/>
+
+    <Button
+        android:id="@+id/btnLoginGoogle"
+        style="?attr/materialButtonOutlinedStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/dm_sans_medium"
+        android:paddingVertical="10dp"
+        android:layout_marginBottom="40dp"
+        android:layout_marginHorizontal="24dp"
+        android:text="Masuk Dengan Google"
+        android:textAllCaps="false"
+        android:textColor="@color/warna_button"
+        app:strokeColor="@color/warna_button"
+        android:textSize="16sp"
+        app:circularflow_radiusInDP="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
