--- a/app/src/main/res/layout/activity_pembayaran_transfer_lokal.xml
+++ b/app/src/main/res/layout/activity_pembayaran_transfer_lokal.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/warna_background"
     tools:context=".features.metodetransfer.lokal.PembayaranTransferLokalActivity">
 
     <ImageView
