--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -51,14 +51,18 @@
         <item name="textAllCaps">false</item>
     </style>
 
+    <style name="roundedbutton">
+        <item name="backgroundTint">@color/background_field</item>
+        <item name="android:textSize">18sp</item>
+        <item name="cornerRadius">50dp</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
     <style name="outlinedButton">
         <item name="android:textSize">18sp</item>
         <item name="strokeColor">@color/warning_font</item>
         <item name="cornerRadius">10dp</item>
         <item name="textAllCaps">false</item>
     </style>
-    <!--    <style name="background">-->
-    <!--        <item name="backgroundTint">@color/warna_background</item>-->
-    <!--    </style>-->
 
 </resources>
