--- a/app/src/main/res/layout/activity_pin.xml
+++ b/app/src/main/res/layout/activity_pin.xml
@@ -25,6 +25,7 @@
         android:text="Membuat Pin Evilz"
         android:textSize="16sp"
         android:textColor="@color/black"
+        android:fontFamily="@font/dm_sans"
         android:layout_marginTop="30dp"
         android:layout_marginStart="80dp"
         app:layout_constraintStart_toEndOf="@+id/ivArrowBack"
@@ -47,6 +48,7 @@
         android:layout_height="wrap_content"
         android:text="Pin Evilz ini digunakan untuk proses pembayaran/transfer pada TransEvilz. Gunakan kombinasi 6 angka tanpa huruf dan simbol"
         android:textColor="@color/warna_secondary_font"
+        android:fontFamily="@font/dm_sans"
         android:layout_marginTop="44dp"
         android:layout_marginStart="5dp"
         app:layout_constraintStart_toEndOf="@id/ivInfo"
@@ -58,6 +60,7 @@
         android:layout_height="wrap_content"
         android:text="Buat Pin Evilz"
         android:textColor="@color/black"
+        android:fontFamily="@font/dm_sans"
         android:layout_marginTop="69dp"
         android:layout_marginStart="24dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,8 +93,9 @@
             android:layout_weight="1"
             android:paddingStart="10dp"
             android:hint="Masukkan 6 digit Pin"
+            android:fontFamily="@font/dm_sans"
             android:textColorHint="@color/warna_secondary_font"
-            android:inputType="number"
+            android:inputType="numberPassword"
             android:maxLength="6"
             android:textColor="@color/black"
             android:background="@drawable/transparent_bg_button"/>
@@ -121,6 +125,7 @@
         android:layout_height="wrap_content"
         android:text="Konfirmasi Pin Evilz"
         android:textColor="@color/black"
+        android:fontFamily="@font/dm_sans"
         android:layout_marginTop="74dp"
         android:layout_marginStart="24dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -155,7 +160,8 @@
             android:paddingStart="10dp"
             android:background="@drawable/transparent_bg_button"
             android:hint="Masukkan 6 digit Pin yang telah dibuat"
-            android:inputType="number"
+            android:fontFamily="@font/dm_sans"
+            android:inputType="numberPassword"
             android:maxLength="6"
             android:textColor="@color/black"
             android:textColorHint="@color/warna_secondary_font" />
@@ -181,7 +187,7 @@
         android:id="@+id/btnKirimPin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/firstbutton"
+        style="@style/invisiblebutton"
         android:fontFamily="@font/dm_sans_medium"
         android:paddingVertical="10dp"
         android:layout_marginBottom="40dp"
