--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,145 +8,147 @@
     android:background="@color/warna_background"
     tools:context=".features.auth.login.LoginActivity">
 
+    <TextView
+        android:id="@+id/tvHeadingSatu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="59dp"
+        android:fontFamily="@font/dm_sans_medium"
+        android:paddingStart="50dp"
+        android:paddingEnd="50dp"
+        android:text="Hallo !"
+        android:textAlignment="center"
+        android:textColor="@color/warna_primary_font"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <LinearLayout
+        android:id="@+id/lyLogin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@+id/tvHeadingSatu"
+        app:layout_constraintStart_toStartOf="parent">
+
         <TextView
-            android:id="@+id/tvHeadingSatu"
-            android:layout_width="match_parent"
+            android:id="@+id/tvDescSatu"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="59dp"
+            android:layout_marginVertical="5dp"
             android:fontFamily="@font/dm_sans_medium"
-            android:paddingStart="50dp"
-            android:paddingEnd="50dp"
-            android:text="Hallo !"
+            android:text="Belum punya akun ?"
             android:textAlignment="center"
-            android:textColor="@color/warna_primary_font"
-            android:textSize="24sp"
+            android:textColor="@color/warna_secondary_font"
+            android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" />
 
-        <LinearLayout
-            android:id="@+id/lyLogin"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/tvPerDescSatu"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            app:layout_constraintTop_toBottomOf="@+id/tvHeadingSatu"
-            app:layout_constraintStart_toStartOf="parent">
-
-            <TextView
-                android:id="@+id/tvDescSatu"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="5dp"
-                android:fontFamily="@font/dm_sans_medium"
-                android:text="Sudah punya akun ?"
-                android:textAlignment="center"
-                android:textColor="@color/warna_secondary_font"
-                android:textSize="12sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <TextView
-                android:id="@+id/tvPerDescSatu"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="5dp"
-                android:layout_marginStart="5dp"
-                android:fontFamily="@font/dm_sans_medium"
-                android:text="Lakukan Registrasi"
-                android:textAlignment="center"
-                android:textColor="@color/warna_verifikasi_font"
-                android:textSize="12sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent" />
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/ivLogin"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            android:layout_marginVertical="20dp"
-            android:src="@drawable/ic_login"
+            android:layout_marginVertical="5dp"
+            android:layout_marginStart="5dp"
+            android:fontFamily="@font/dm_sans_medium"
+            android:text="Lakukan Registrasi"
+            android:textAlignment="center"
+            android:textColor="@color/warna_verifikasi_font"
+            android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/lyLogin" />
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent" />
+    </LinearLayout>
 
-        <TextView
-            android:id="@+id/tvEmail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Email"
-            android:fontFamily="@font/dm_sans_medium"
-            android:textColor="@color/warna_auth_font"
-            android:textSize="16sp"
-            android:layout_marginVertical="33dp"
-            android:layout_marginStart="24dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ivLogin"/>
+    <ImageView
+        android:id="@+id/ivLogin"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginVertical="20dp"
+        android:src="@drawable/ic_login"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/lyLogin" />
 
-        <TextView
-            android:id="@+id/tvStarEmail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="*"
-            android:textColor="@color/warning_font"
-            android:fontFamily="@font/dm_sans_medium"
-            android:textSize="16sp"
-            android:layout_marginVertical="30dp"
-            android:layout_marginStart="5dp"
-            app:layout_constraintStart_toEndOf="@+id/tvEmail"
-            app:layout_constraintTop_toBottomOf="@+id/ivLogin"/>
+    <TextView
+        android:id="@+id/tvEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Email"
+        android:fontFamily="@font/dm_sans_medium"
+        android:textColor="@color/warna_auth_font"
+        android:textSize="16sp"
+        android:layout_marginVertical="33dp"
+        android:layout_marginStart="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivLogin"/>
 
-        <EditText
-            android:id="@+id/etEmail"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:hint="Email"
-            android:layout_marginHorizontal="24dp"
-            android:layout_marginVertical="5dp"
-            android:paddingStart="10dp"
-            android:textColorHint="@color/warna_auth_font"
-            android:textColor="@color/warna_auth_font"
-            android:background="@drawable/transparent_bg_button"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvEmail"
-            />
+    <TextView
+        android:id="@+id/tvStarEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="*"
+        android:textColor="@color/warning_font"
+        android:fontFamily="@font/dm_sans_medium"
+        android:textSize="16sp"
+        android:layout_marginVertical="30dp"
+        android:layout_marginStart="5dp"
+        app:layout_constraintStart_toEndOf="@+id/tvEmail"
+        app:layout_constraintTop_toBottomOf="@+id/ivLogin"/>
 
-        <TextView
-            android:id="@+id/tvWarningEmail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="5dp"
-            android:layout_marginStart="24dp"
-            android:textColor="@color/warning_font"
-            android:visibility="invisible"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etEmail"/>
+    <EditText
+        android:id="@+id/etEmail"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:hint="Email"
+        android:fontFamily="@font/dm_sans"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginVertical="5dp"
+        android:paddingStart="10dp"
+        android:textColorHint="@color/warna_auth_font"
+        android:textColor="@color/warna_auth_font"
+        android:background="@drawable/transparent_bg_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
+        />
 
-        <TextView
-            android:id="@+id/tvPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Kata Sandi"
-            android:fontFamily="@font/dm_sans_medium"
-            android:textSize="16sp"
-            android:textColor="@color/warna_auth_font"
-            android:layout_marginStart="24dp"
-            android:layout_marginVertical="5dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvWarningEmail"/>
+    <TextView
+        android:id="@+id/tvWarningEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="5dp"
+        android:layout_marginStart="24dp"
+        android:textColor="@color/warning_font"
+        android:fontFamily="@font/dm_sans"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etEmail"/>
 
-        <TextView
-            android:id="@+id/tvStarPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="*"
-            android:textColor="@color/warning_font"
-            android:fontFamily="@font/dm_sans_medium"
-            android:textSize="16sp"
-            android:layout_marginStart="5dp"
-            app:layout_constraintStart_toEndOf="@+id/tvPassword"
-            app:layout_constraintTop_toBottomOf="@+id/tvWarningEmail"/>
+    <TextView
+        android:id="@+id/tvPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Kata Sandi"
+        android:fontFamily="@font/dm_sans_medium"
+        android:textSize="16sp"
+        android:textColor="@color/warna_auth_font"
+        android:layout_marginStart="24dp"
+        android:layout_marginVertical="5dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvWarningEmail"/>
+
+    <TextView
+        android:id="@+id/tvStarPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="*"
+        android:textColor="@color/warning_font"
+        android:fontFamily="@font/dm_sans_medium"
+        android:textSize="16sp"
+        android:layout_marginStart="5dp"
+        app:layout_constraintStart_toEndOf="@+id/tvPassword"
+        app:layout_constraintTop_toBottomOf="@+id/tvWarningEmail"/>
 
     <LinearLayout
         android:id="@+id/linearlayoutKatasandi"
@@ -170,6 +172,7 @@
             android:maxLength="16"
             android:textColorHint="@color/warna_auth_font"
             android:textColor="@color/warna_auth_font"
+            android:fontFamily="@font/dm_sans"
             android:background="@drawable/transparent_bg_button"/>
 
         <ImageButton
@@ -180,42 +183,43 @@
             android:background="@drawable/transparent_bg_button"/>
     </LinearLayout>
 
-        <TextView
-            android:id="@+id/tvWarningKataSandi"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearlayoutKatasandi"
-            android:layout_marginHorizontal="24dp"
-            android:textColor="@color/warning_font"
-            android:visibility="invisible"/>
+    <TextView
+        android:id="@+id/tvWarningKataSandi"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearlayoutKatasandi"
+        android:layout_marginHorizontal="24dp"
+        android:textColor="@color/warning_font"
+        android:fontFamily="@font/dm_sans"
+        android:visibility="invisible"/>
 
-        <TextView
-            android:id="@+id/tvLupaPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Lupa Kata Sandi ?"
-            android:fontFamily="@font/dm_sans_medium"
-            android:textSize="16sp"
-            android:textColor="@color/warna_button"
-            android:layout_marginVertical="5dp"
-            android:layout_marginEnd="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvWarningKataSandi"
-            app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+        android:id="@+id/tvLupaPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Lupa Kata Sandi ?"
+        android:fontFamily="@font/dm_sans_medium"
+        android:textSize="16sp"
+        android:textColor="@color/warna_button"
+        android:layout_marginVertical="5dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvWarningKataSandi"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-        <Button
-            android:id="@+id/btnLogin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/firstbutton"
-            android:fontFamily="@font/dm_sans_medium"
-            android:paddingVertical="10dp"
-            android:layout_marginBottom="40dp"
-            android:layout_marginHorizontal="24dp"
-            android:text="Masuk"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:enabled="false"/>
+    <Button
+        android:id="@+id/btnLogin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/invisiblebutton"
+        android:fontFamily="@font/dm_sans_medium"
+        android:paddingVertical="10dp"
+        android:layout_marginBottom="40dp"
+        android:layout_marginHorizontal="24dp"
+        android:text="Masuk"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:enabled="false"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
