--- a/app/src/main/res/layout/activity_lupa_password_pw.xml
+++ b/app/src/main/res/layout/activity_lupa_password_pw.xml
@@ -78,33 +78,52 @@
         android:layout_marginTop="30dp"
         android:layout_marginStart="4dp"/>
 
-    <EditText
-        android:id="@+id/etKatasandi"
+    <LinearLayout
+        android:id="@+id/llKatasandi"
         android:layout_width="match_parent"
-        android:layout_height="39dp"
-        android:hint="Kata sandi baru"
-        android:textColor="@color/black"
-        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@$#"
-        android:maxLength="16"
-        android:textSize="12sp"
-        android:fontFamily="@font/dm_sans_medium"
-        android:paddingStart="10dp"
-        android:textColorHint="@color/warna_grey_font"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:layout_marginVertical="5dp"
+        android:background="@drawable/transparent_bg_button"
+        android:layout_marginHorizontal="24dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvKatasandiBaru"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="24dp"
-        android:background="@drawable/transparent_bg_button"/>
+        app:layout_constraintTop_toBottomOf="@+id/tvKatasandiBaru">
+
+        <EditText
+            android:id="@+id/etKatasandi"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:hint="Kata sandi baru"
+            android:textColor="@color/warna_auth_font"
+            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@#*&amp;"
+            android:inputType="textPassword"
+            android:maxLength="16"
+            android:textSize="12sp"
+            android:fontFamily="@font/dm_sans_medium"
+            android:textColorHint="@color/warna_auth_font"
+            android:background="@drawable/transparent_bg_button"
+            android:layout_weight="1"/>
+
+        <ImageButton
+            android:id="@+id/ibShowKataSandiBaru"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/eye_off"
+            android:background="@drawable/transparent_bg_button"/>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tvWarningKataSandi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/dm_sans"
         android:textColor="@color/warning_font"
         android:visibility="invisible"
+        android:textSize="14dp"
         android:layout_marginHorizontal="24dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etKatasandi"/>
+        app:layout_constraintTop_toBottomOf="@+id/llKatasandi"/>
+
     <TextView
         android:id="@+id/tvKonfirmasiKatasandi"
         android:layout_width="wrap_content"
@@ -114,8 +133,8 @@
         android:textSize="16sp"
         android:fontFamily="@font/dm_sans_medium"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etKatasandi"
-        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@+id/llKatasandi"
+        android:layout_marginVertical="40dp"
         android:layout_marginStart="24dp"/>
 
     <TextView
@@ -124,55 +143,69 @@
         android:text="*"
         android:textColor="@color/warning_font"
         app:layout_constraintStart_toEndOf="@+id/tvKonfirmasiKatasandi"
-        app:layout_constraintTop_toBottomOf="@+id/etKatasandi"
+        app:layout_constraintTop_toBottomOf="@+id/llKatasandi"
         android:layout_marginTop="30dp"
         android:layout_marginStart="4dp"/>
 
-    <EditText
-        android:id="@+id/etKonfirmasiKatasandi"
+    <LinearLayout
+        android:id="@+id/llKonfirmasiKatasandiBaru"
         android:layout_width="match_parent"
-        android:layout_height="39dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="5dp"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:layout_marginVertical="5dp"
         android:background="@drawable/transparent_bg_button"
-        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@$#"
-        android:maxLength="16"
-        android:fontFamily="@font/dm_sans_medium"
-        android:hint="Konfirmasi kata sandi baru"
-        android:paddingStart="10dp"
-        android:textColor="@color/black"
-        android:textColorHint="@color/warna_grey_font"
-        android:textSize="12sp"
+        android:layout_marginHorizontal="24dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvKonfirmasiKatasandi" />
+        app:layout_constraintTop_toBottomOf="@+id/tvKonfirmasiKatasandi">
+
+        <EditText
+            android:id="@+id/etKonfirmasiKatasandiBaru"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:hint="Kata sandi baru"
+            android:textColor="@color/warna_auth_font"
+            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@#*&amp;"
+            android:inputType="textPassword"
+            android:maxLength="16"
+            android:textSize="12sp"
+            android:fontFamily="@font/dm_sans_medium"
+            android:textColorHint="@color/warna_auth_font"
+            android:background="@drawable/transparent_bg_button"
+            android:layout_weight="1"/>
+
+        <ImageButton
+            android:id="@+id/ibShowKonfirmasiKataSandi"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/eye_off"
+            android:background="@drawable/transparent_bg_button"/>
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/tvWarningKataSandiBaru"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Kata sandi harus sama"
+        android:fontFamily="@font/dm_sans"
         android:textColor="@color/warning_font"
         android:layout_marginStart="30dp"
         android:layout_marginTop="5dp"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etKonfirmasiKatasandi"/>
+        app:layout_constraintTop_toBottomOf="@+id/llKonfirmasiKatasandiBaru"/>
 
     <Button
         android:id="@+id/btnKirim"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/firstbutton"
+        style="@style/invisiblebutton"
         android:fontFamily="@font/dm_sans_medium"
-        android:layout_marginVertical="55dp"
-        android:paddingVertical="10dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginVertical="40dp"
+        android:layout_marginHorizontal="24dp"
         android:text="Kirim"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etKonfirmasiKatasandi"
-        android:layout_marginTop="84dp"
-        android:backgroundTint="@color/warna_button"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:enabled="false"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
