--- a/app/src/main/res/layout/activity_verifikasi.xml
+++ b/app/src/main/res/layout/activity_verifikasi.xml
@@ -8,11 +8,12 @@
     android:background="@color/warna_background"
     tools:context=".features.auth.verifikasi.VerifikasiActivity">
 
-    <ImageView
-        android:id="@+id/ivBack"
+    <ImageButton
+        android:id="@+id/ibBack"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/ic_baseline_arrow_back_24"
+        android:background="@color/warna_background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginVertical="19dp"
@@ -27,7 +28,8 @@
         android:textAlignment="center"
         android:textColor="@color/warna_auth_font"
         android:fontFamily="@font/dm_sans_bold"
-        app:layout_constraintTop_toBottomOf="@+id/ivBack"
+        android:layout_marginVertical="19dp"
+        app:layout_constraintTop_toBottomOf="@+id/ibBack"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -76,6 +78,33 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTimer" />
+
+    <TextView
+        android:id="@+id/tvBelumDapat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Belum dapat kode OTP ?"
+        android:textColor="@color/warna_auth_font"
+        android:textSize="12dp"
+        android:fontFamily="@font/dm_sans"
+        android:layout_marginVertical="20dp"
+        android:layout_marginStart="59dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvKodeOtp"/>
+
+    <TextView
+        android:id="@+id/tvKirimUlangKode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Kirim ulang kode OTP"
+        android:textColor="@color/warna_button_invisible"
+        android:textSize="12dp"
+        android:fontFamily="@font/dm_sans"
+        android:layout_marginVertical="20dp"
+        android:layout_marginHorizontal="5dp"
+        app:layout_constraintStart_toEndOf="@+id/tvBelumDapat"
+        app:layout_constraintTop_toBottomOf="@+id/tvKodeOtp"
+        android:enabled="false"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constrainSatu"
@@ -445,46 +474,5 @@
             app:layout_constraintEnd_toEndOf="@+id/constrainEmpat"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <LinearLayout
-        android:id="@+id/lyOtp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constrainEmpat">
-
-        <TextView
-            android:id="@+id/tvDescSatu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="5dp"
-            android:layout_marginTop="4dp"
-            android:fontFamily="@font/dm_sans_medium"
-            android:text="Belum dapat Kode OTP ?"
-            android:textAlignment="center"
-            android:textColor="@color/warna_secondary_font"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/tvPerDescSatu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="4dp"
-            android:fontFamily="@font/dm_sans_medium"
-            android:text="Kirim Ulang Kode OTP"
-            android:textAlignment="center"
-            android:textColor="@color/warna_verifikasi_font"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent" />
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
