--- a/app/src/main/res/layout/pop_up_aktivasi_akun.xml
+++ b/app/src/main/res/layout/pop_up_aktivasi_akun.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/warna_background">
 
     <ImageView
         android:id="@+id/ivCross"
@@ -28,6 +29,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ivCross"/>
 
     <Button
+        android:id="@+id/btnCobaNanti"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Coba Nanti"
